--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title>MercanSoft</title>
 </head>
 <body>
-    
+    <header class="header">header</header>
+    <section class="sec-1">sec 1</section>
+    <section class="sec-2">sec 2</section>
+    <section class="sec-3">sec 3</section>
+    <footer class="footer">footer</footer>
 </body>
 </html>
