Header tag is written.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,46 @@
     <title>MercanSoft</title>
 </head>
 <body>
-    <header class="header">header</header>
+    <div class="container">
+        <header class="header">
+            <img  class="navbar-brand" src="imgs/logo-big.png" alt="brand" />
+            <div class="navbar">
+                <nav class="navbar-nav">                
+                    <ul class="navbar-list">
+                        <li class="navbar-item"><a href="#" class="navbar-link">Home</a></li>
+                        <li class="navbar-item"><a href="#" class="navbar-link">About</a></li>
+                        <li class="navbar-item"><a href="#" class="navbar-link">Services</a></li>
+                        <li class="navbar-item"><a href="#" class="navbar-link">Referances</a></li>
+                        <li class="navbar-item"><a href="#" class="navbar-link">Blog</a></li>
+                        <li class="navbar-item"><a href="#" class="navbar-link">Contanct</a></li>
+                    </ul> 
+                </nav>
+                <button class="btn btn-success">Nav</button>
+            </div>
+            <nav class="icons icons-header">
+                <ul class="icons-list">
+                    <li class="icons-item"><a href="#" class="icons-link">twitter</a></li>
+                    <li class="icons-item"><a href="#" class="icons-link">facebook</a></li>
+                    <li class="icons-item"><a href="#" class="icons-link">instagram</a></li>
+                    <li class="icons-item"><a href="#" class="icons-link">linkedin</a></li>
+                    <li class="icons-item"><a href="#" class="icons-link">google-plus</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
     <section class="sec-1">sec 1</section>
     <section class="sec-2">sec 2</section>
     <section class="sec-3">sec 3</section>
-    <footer class="footer">footer</footer>
+    <footer class="footer">
+        <nav class="icons icons-footer">
+            <ul class="icons-list">
+                <li class="icons-item"><a href="#" class="icons-link">twitter</a></li>
+                <li class="icons-item"><a href="#" class="icons-link">facebook</a></li>
+                <li class="icons-item"><a href="#" class="icons-link">instagram</a></li>
+                <li class="icons-item"><a href="#" class="icons-link">linkedin</a></li>
+                <li class="icons-item"><a href="#" class="icons-link">google-plus</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
