Sass is integrated.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <img  class="navbar-brand" src="imgs/logo-big.png" alt="brand" />
+            <img  class="header-brand" src="imgs/logo-big.png" alt="brand" />
             <div class="navbar">
                 <nav class="navbar-nav">                
                     <ul class="navbar-list">
@@ -25,7 +25,7 @@
                 </nav>
                 <button class="btn btn-success">Nav</button>
             </div>
-            <nav class="icons icons-header">
+            <nav class="icons header-icons">
                 <ul class="icons-list">
                     <li class="icons-item"><a href="#" class="icons-link">twitter</a></li>
                     <li class="icons-item"><a href="#" class="icons-link">facebook</a></li>
