Butoon is written.

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                         <li class="navbar-item"><a href="#" class="navbar-link">Contanct</a></li>
                     </ul> 
                 </nav>
-                <button class="btn btn-success">Nav</button>
+                <button class="btn btn-success"><span>login</span><span>login</span></button>
             </div>
             <nav class="icons header-icons">
                 <ul class="icons-list">
-                    <li class="icons-item"><a href="#" class="icons-link">twitter</a></li>
-                    <li class="icons-item"><a href="#" class="icons-link">facebook</a></li>
-                    <li class="icons-item"><a href="#" class="icons-link">instagram</a></li>
-                    <li class="icons-item"><a href="#" class="icons-link">linkedin</a></li>
-                    <li class="icons-item"><a href="#" class="icons-link">google-plus</a></li>
+                    <li><a href="#" class="icons-link"><i class="icons-fab fab fa-twitter"></i></a></li>
+                    <li><a href="#" class="icons-link"><i class="icons-fab fab fa-facebook-f"></i></a></li>
+                    <li><a href="#" class="icons-link"><i class="icons-fab fab fa-linkedin-in"></i></a></li>
+                    <li><a href="#" class="icons-link"><i class="icons-fab fab fa-instagram"></i></a></li>
+                    <li><a href="#" class="icons-link"><i class="icons-fab fab fa-google-plus-g"></i></a></li>
                 </ul>
             </nav>
         </header>
@@ -42,13 +42,15 @@
     <footer class="footer">
         <nav class="icons icons-footer">
             <ul class="icons-list">
-                <li class="icons-item"><a href="#" class="icons-link">twitter</a></li>
-                <li class="icons-item"><a href="#" class="icons-link">facebook</a></li>
-                <li class="icons-item"><a href="#" class="icons-link">instagram</a></li>
-                <li class="icons-item"><a href="#" class="icons-link">linkedin</a></li>
-                <li class="icons-item"><a href="#" class="icons-link">google-plus</a></li>
+                <li><a href="#" class="icons-link"><i class="icons-fab fab fa-twitter"></i></a></li>
+                <li><a href="#" class="icons-link"><i class="icons-fab fab fa-facebook-f"></i></a></li>
+                <li><a href="#" class="icons-link"><i class="icons-fab fab fa-linkedin-in"></i></a></li>
+                <li><a href="#" class="icons-link"><i class="icons-fab fab fa-instagram"></i></a></li>
+                <li><a href="#" class="icons-link"><i class="icons-fab fab fa-google-plus-g"></i></a></li>
             </ul>
         </nav>
     </footer>
+
+    <script src="https://kit.fontawesome.com/ebe1a92e12.js" crossorigin="anonymous"></script>
 </body>
 </html>
