Navigation is written.

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
             <div class="navbar">
                 <nav class="navbar-nav">                
                     <ul class="navbar-list">
-                        <li class="navbar-item"><a href="#" class="navbar-link">Home</a></li>
-                        <li class="navbar-item"><a href="#" class="navbar-link">About</a></li>
-                        <li class="navbar-item"><a href="#" class="navbar-link">Services</a></li>
-                        <li class="navbar-item"><a href="#" class="navbar-link">Referances</a></li>
-                        <li class="navbar-item"><a href="#" class="navbar-link">Blog</a></li>
-                        <li class="navbar-item"><a href="#" class="navbar-link">Contanct</a></li>
+                        <li class="navbar-item"><a href="#" class="navbar-link"><span>Home</span><span>Home</span></a></li>
+                        <li class="navbar-item"><a href="#" class="navbar-link"><span>About</span><span>About</span></a></li>
+                        <li class="navbar-item"><a href="#" class="navbar-link"><span>Services</span><span>Services</span></a></li>
+                        <li class="navbar-item"><a href="#" class="navbar-link"><span>Referances</span><span>Referances</span></a></li>
+                        <li class="navbar-item"><a href="#" class="navbar-link"><span>Blog</span><span>Blog</span></a></li>
+                        <li class="navbar-item"><a href="#" class="navbar-link"><span>Contact</span><span>Contact</span></a></li>
                     </ul> 
                 </nav>
                 <button class="btn btn-success"><span>login</span><span>login</span></button>
