Section Info is written.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="container">
+<!-- header -->
         <header class="header">
             <img  class="header-brand" src="imgs/logo-big.png" alt="brand" />
             <div class="navbar">
@@ -35,22 +36,41 @@
                 </ul>
             </nav>
         </header>
+<!-- header -->
+<!-- section 1 -->
+        <section class="sec-info">
+            <div class="sec-info-container">
+                <div class="sec-info-left">
+                    <h1 class="t1">
+                        <span>Lorem, ipsum dolor sit amet</span> 
+                        <span>consectetur adipisicing elit. </span>
+                        <span>Rerum! Minima fugiat beatae quos.</span>
+                    </h1>
+                    <p class="t4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae non maiores iure nobis deleniti dolorem quidem! Hic magnam aut dolorem rerum. Fugit iure obcaecati sed possimus nostrum praesentium dicta assumenda?</p>
+                    <button class="btn btn-success btn-middle"><span>continue</span><span>continue</span></button>
+                </div>
+                <div class="sec-info-right">
+                    <img class="sec-info-img" src="imgs/programming-1000.png" alt="info-img">
+                </div>
+            </div>
+        </section>
+<!-- section 1 -->
+        <section class="sec-2">sec 2</section>
+        <section class="sec-3">sec 3</section>
+<!-- footer -->
+        <footer class="footer">
+            <nav class="icons icons-footer">
+                <ul class="icons-list">
+                    <li><a href="#" class="icons-link"><i class="icons-fab fab fa-twitter"></i></a></li>
+                    <li><a href="#" class="icons-link"><i class="icons-fab fab fa-facebook-f"></i></a></li>
+                    <li><a href="#" class="icons-link"><i class="icons-fab fab fa-linkedin-in"></i></a></li>
+                    <li><a href="#" class="icons-link"><i class="icons-fab fab fa-instagram"></i></a></li>
+                    <li><a href="#" class="icons-link"><i class="icons-fab fab fa-google-plus-g"></i></a></li>
+                </ul>
+            </nav>
+        </footer>
+<!-- footer -->
     </div>
-    <section class="sec-1">sec 1</section>
-    <section class="sec-2">sec 2</section>
-    <section class="sec-3">sec 3</section>
-    <footer class="footer">
-        <nav class="icons icons-footer">
-            <ul class="icons-list">
-                <li><a href="#" class="icons-link"><i class="icons-fab fab fa-twitter"></i></a></li>
-                <li><a href="#" class="icons-link"><i class="icons-fab fab fa-facebook-f"></i></a></li>
-                <li><a href="#" class="icons-link"><i class="icons-fab fab fa-linkedin-in"></i></a></li>
-                <li><a href="#" class="icons-link"><i class="icons-fab fab fa-instagram"></i></a></li>
-                <li><a href="#" class="icons-link"><i class="icons-fab fab fa-google-plus-g"></i></a></li>
-            </ul>
-        </nav>
-    </footer>
-
     <script src="https://kit.fontawesome.com/ebe1a92e12.js" crossorigin="anonymous"></script>
 </body>
 </html>
