The variables file is created. The colors in the project were arranged.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <li class="navbar-item"><a href="#" class="navbar-link"><span>Contact</span><span>Contact</span></a></li>
                     </ul> 
                 </nav>
-                <button class="btn btn-success"><span>login</span><span>login</span></button>
+                <button class="btn btn-primary"><span>login</span><span>login</span></button>
             </div>
             <nav class="icons header-icons">
                 <ul class="icons-list">
@@ -47,7 +47,7 @@
                         <span>Rerum! Minima fugiat beatae quos.</span>
                     </h1>
                     <p class="t4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae non maiores iure nobis deleniti dolorem quidem! Hic magnam aut dolorem rerum. Fugit iure obcaecati sed possimus nostrum praesentium dicta assumenda?</p>
-                    <button class="btn btn-success btn-middle"><span>continue</span><span>continue</span></button>
+                    <button class="btn btn-primary btn-middle"><span>continue</span><span>continue</span></button>
                 </div>
                 <div class="sec-info-right">
                     <img class="sec-info-img" src="imgs/programming-1000.png" alt="info-img">
