Section features is written.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,46 @@
             </div>
         </section>
 <!-- section 1 -->
-        <section class="sec-2">sec 2</section>
+<!-- section 2 -->
+        <section class="sec-features">
+            <div class="sec-features-top">
+                <h1 class="t2">Lorem, ipsum dolor.</h1>
+                <p class="t4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi non adipisci soluta hic maiores quidem maxime placeat ullam quaerat voluptatem! Suscipit distinctio dignissimos magni quaerat commodi! Quis nostrum quae architecto?</p>
+            </div>
+            <div class="sec-features-bottom">
+                <div class="sec-features-feature">
+                    <i class="sec-features-icon fas fa-laptop-code"></i>
+                    <h2 class="t3">Lorem, ipsum dolor.</h2>
+                    <p class="s1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, totam labore. Pariatur, tempore atque. Dolores soluta esse corporis suscipit placeat nobis odit? Rem autem eaque nulla molestias dolores reprehenderit alias.</p>
+                </div>
+                <div class="sec-features-feature">
+                    <i class="sec-features-icon fas fa-laptop-house"></i>
+                    <h2 class="t3">Lorem, ipsum dolor.</h2>
+                    <p class="s1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, totam labore. Pariatur, tempore atque. Dolores soluta esse corporis suscipit placeat nobis odit? Rem autem eaque nulla molestias dolores reprehenderit alias.</p>
+                </div>
+                <div class="sec-features-feature">
+                    <i class="sec-features-icon fas fa-search-location"></i>
+                    <h2 class="t3">Lorem, ipsum dolor.</h2>
+                    <p class="s1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, totam labore. Pariatur, tempore atque. Dolores soluta esse corporis suscipit placeat nobis odit? Rem autem eaque nulla molestias dolores reprehenderit alias.</p>
+                </div>
+                <div class="sec-features-feature">
+                    <i class="sec-features-icon fas fa-globe"></i>
+                    <h2 class="t3">Lorem, ipsum dolor.</h2>
+                    <p class="s1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, totam labore. Pariatur, tempore atque. Dolores soluta esse corporis suscipit placeat nobis odit? Rem autem eaque nulla molestias dolores reprehenderit alias.</p>
+                </div>
+                <div class="sec-features-feature">
+                    <i class="sec-features-icon fas fa-mobile-alt"></i>
+                    <h2 class="t3">Lorem, ipsum dolor.</h2>
+                    <p class="s1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, totam labore. Pariatur, tempore atque. Dolores soluta esse corporis suscipit placeat nobis odit? Rem autem eaque nulla molestias dolores reprehenderit alias.</p>
+                </div>
+                <div class="sec-features-feature">
+                    <i class="sec-features-icon fas fa-server"></i>
+                    <h2 class="t3">Lorem, ipsum dolor.</h2>
+                    <p class="s1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum, totam labore. Pariatur, tempore atque. Dolores soluta esse corporis suscipit placeat nobis odit? Rem autem eaque nulla molestias dolores reprehenderit alias.</p>
+                </div>
+            </div>
+        </section>
+<!-- section 2 -->
         <section class="sec-3">sec 3</section>
 <!-- footer -->
         <footer class="footer">
