--- a/index.html
+++ b/index.html
@@ -95,7 +95,59 @@
             </div>
         </section>
 <!-- section 2 -->
-        <section class="sec-3">sec 3</section>
+<!-- section 3 -->
+        <section class="sec-workflow">
+            <div class="sec-workflow-top">
+                <h1 class="t2">Lorem, ipsum dolor.</h1>
+                <p class="t4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi non adipisci soluta hic maiores quidem maxime placeat ullam quaerat voluptatem! Suscipit distinctio dignissimos magni quaerat commodi! Quis nostrum quae architecto?</p>
+            </div>
+            <div class="sec-workflow-bottom">
+                <div class="sec-workflow-left">
+                    <div class="sec-workflow-box">
+                        <h2 class="sec-workflow-heading t3 text-right">1- Lorem, ipsum dolor.</h2>
+                        <img class="sec-workflow-icon f-right" src="imgs/workflow1.png" />
+                        <p class="s1 text-right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, amet maiores. Ratione sed repellendus possimus!</p>
+                    </div>
+                    <div class="sec-workflow-box"></div>
+                    <div class="sec-workflow-box">
+                        <h2 class="sec-workflow-heading t3 text-right">2- Lorem, ipsum dolor.</h2>
+                        <img class="sec-workflow-icon f-right" src="imgs/workflow2.png" />
+                        <p class="s1 text-right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, amet maiores. Ratione sed repellendus possimus!</p>
+                    </div>
+                    <div class="sec-workflow-box"></div>
+                    <div class="sec-workflow-box">
+                        <h2 class="sec-workflow-heading t3 text-right">3- Lorem, ipsum dolor.</h2>
+                        <img class="sec-workflow-icon f-right" src="imgs/workflow3.png" />
+                        <p class="s1 text-right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, amet maiores. Ratione sed repellendus possimus!</p>
+                    </div>
+                </div>
+                <div class="sec-workflow-flow">
+                    <div class="sec-workflow-line">
+                        <span class="sec-workflow-circle"></span>
+                        <span class="sec-workflow-circle"></span>
+                        <span class="sec-workflow-circle"></span>
+                        <span class="sec-workflow-circle"></span>
+                        <span class="sec-workflow-circle"></span>
+                    </div>
+                </div>
+                <div class="sec-workflow-right">
+                    <div class="sec-workflow-box"></div>
+                    <div class="sec-workflow-box">
+                        <h2 class="sec-workflow-heading t3">4- Lorem, ipsum dolor.</h2>
+                        <img class="sec-workflow-icon" src="imgs/workflow4.png" />
+                        <p class="s1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, amet maiores. Ratione sed repellendus possimus!</p>
+                    </div>
+                    <div class="sec-workflow-box"></div>
+                    <div class="sec-workflow-box">
+                        <h2 class="sec-workflow-heading t3">5- Lorem, ipsum dolor.</h2>
+                        <img class="sec-workflow-icon" src="imgs/workflow5.png" />
+                        <p class="s1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, amet maiores. Ratione sed repellendus possimus!</p>
+                    </div>
+                    <div class="sec-workflow-box"></div>
+                </div>
+            </div>
+        </section>
+<!-- section 3 -->
 <!-- footer -->
         <footer class="footer">
             <nav class="icons icons-footer">
