Section Card was written.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <!-- section 2 -->
         <section class="sec-features">
             <div class="sec-features-top">
-                <h1 class="t2">Lorem, ipsum dolor.</h1>
+                <h1 class="t2 sec-features-heading">Lorem, ipsum dolor.</h1>
                 <p class="t4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi non adipisci soluta hic maiores quidem maxime placeat ullam quaerat voluptatem! Suscipit distinctio dignissimos magni quaerat commodi! Quis nostrum quae architecto?</p>
             </div>
             <div class="sec-features-bottom">
@@ -148,6 +148,7 @@
             </div>
         </section>
 <!-- section 3 -->
+<!-- section 4 -->
         <section class="sec-counter">
             <div class="sec-counter-container">
                 <div class="sec-counter-top">
@@ -187,6 +188,77 @@
                 <button class="btn btn-primary btn-middle"><span>Details</span><span>Details</span></button>
             </div>
         </section>
+<!-- section 4 -->
+<!-- section 5 -->
+        <section class="sec-card">
+            <h1 class="t2 t2-primary">Lorem, ipsum dolor.</h1>
+            <div class="sec-card-cards">
+                <div class="card">
+                    <div class="card-top card-pink">
+                        <svg class="card-icon">
+                            <use xlink:href="./imgs/sprite.svg#working-at-home"></use>
+                        </svg>
+                        <div class="card-texts">
+                            <span class="card-title">Economic</span>
+                            <span class="card-price">1500<sup>pl</sup></span>
+                            <span class="card-description">yearly</span>
+                        </div>
+                    </div>
+                    <div class="card-bottom">
+                        <ul class="card-list">
+                            <li class="card-item"><span>ssd disc</span><span>1 gb</span></li>
+                            <li class="card-item"><span>sub domain</span><span>3 pieces</span></li>
+                            <li class="card-item"><span>trafic</span><span>80 gb</span></li>
+                            <li class="card-item"><span>cpu</span><span>1 core</span></li>
+                        </ul>
+                        <button class="btn btn-danger btn-middle"><span>buy now</span><span>buy now</span></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-top">
+                        <svg class="card-icon">
+                            <use xlink:href="./imgs/sprite.svg#star"></use>
+                        </svg>
+                        <div class="card-texts">
+                            <span class="card-title">Professional</span>
+                            <span class="card-price">2700<sup>pl</sup></span>
+                            <span class="card-description">yearly</span>
+                        </div>
+                    </div>
+                    <div class="card-bottom">
+                        <ul class="card-list">
+                            <li class="card-item"><span>ssd disc</span><span>5 gb</span></li>
+                            <li class="card-item"><span>sub domain</span><span>10 pieces</span></li>
+                            <li class="card-item"><span>trafic</span><span>200 gb</span></li>
+                            <li class="card-item"><span>cpu</span><span>2 core</span></li>
+                        </ul>
+                        <button class="btn btn-primary btn-middle"><span>buy now</span><span>buy now</span></button>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-top card-purple">
+                        <svg class="card-icon">
+                            <use xlink:href="./imgs/sprite.svg#diamond"></use>
+                        </svg>
+                        <div class="card-texts">
+                            <span class="card-title">Premium</span>
+                            <span class="card-price">4300<sup>pl</sup></span>
+                            <span class="card-description">yearly</span>
+                        </div>
+                    </div>
+                    <div class="card-bottom">
+                        <ul class="card-list">
+                            <li class="card-item"><span>ssd disc</span><span>unlimited</span></li>
+                            <li class="card-item"><span>sub domain</span><span>unlimited</span></li>
+                            <li class="card-item"><span>trafic</span><span>unlimited</span></li>
+                            <li class="card-item"><span>cpu</span><span>4 core</span></li>
+                        </ul>
+                        <button class="btn btn-success btn-middle"><span>buy now</span><span>buy now</span></button>
+                    </div>
+                </div>
+            </div>
+        </section>
+<!-- section 5 -->
 <!-- footer -->
         <footer class="footer">
             <nav class="icons icons-footer">
