Section Idea was written.

--- a/index.html
+++ b/index.html
@@ -259,6 +259,12 @@
             </div>
         </section>
 <!-- section 5 -->
+<!-- section 6 -->
+        <section class="sec-idea">
+            <h1 class="sec-idea-heading">Lorem ipsum dolor sit amet.</h1>
+            <button class="btn btn-primary btn-large"><span>Get in touch</span><span>Get in touch</span></button>
+        </section>
+<!-- section 6 -->
 <!-- footer -->
         <footer class="footer">
             <nav class="icons icons-footer">
