Section Comment was written.

--- a/index.html
+++ b/index.html
@@ -265,6 +265,57 @@
             <button class="btn btn-primary btn-large"><span>Get in touch</span><span>Get in touch</span></button>
         </section>
 <!-- section 6 -->
+<!-- section 7 -->
+        <section class="sec-comment">
+            <div class="sec-comment-top">
+                <h1 class="t2 t2-white">Lorem, ipsum dolor.</h1>
+            </div>
+            <div class="sec-comment-bottom">
+                <div class="comment">
+                    <img class="comment-img" src="imgs/profile1.jpg" alt="profile1">
+                    <div class="comment-shadow">
+                        <div class="comment-content">
+                            <div class="comment-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam quidem, molestias quae porro odio vel iure soluta. Nobis eligendi tempora dicta? Excepturi exercitationem voluptates obcaecati ad iusto sit architecto aspernatur!</div>
+                            <div class="comment-author">-M.Loremy</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="comment">
+                    <img class="comment-img" src="imgs/profile2.jpg" alt="profile2">
+                    <div class="comment-shadow">
+                        <div class="comment-content">
+                            <div class="comment-text">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam quidem, molestias quae porro odio vel iure soluta. Nobis eligendi tempora dicta? Excepturi exercitationem voluptates obcaecati ad iusto sit architecto aspernatur!
+                            </div>
+                            <div class="comment-author">-F.Suezen</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="comment">
+                    <img class="comment-img" src="imgs/profile3.jpg" alt="profile3">
+                    <div class="comment-shadow">
+                        <div class="comment-content">
+                            <div class="comment-text">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam quidem, molestias quae porro odio vel iure soluta. Nobis eligendi tempora dicta? Excepturi exercitationem voluptates obcaecati ad iusto sit architecto aspernatur!
+                            </div>
+                            <div class="comment-author">-D.Gathema</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="comment">
+                    <img class="comment-img" src="imgs/profile4.jpg" alt="profile4">
+                    <div class="comment-shadow">
+                        <div class="comment-content">
+                            <div class="comment-text">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam quidem, molestias quae porro odio vel iure soluta. Nobis eligendi tempora dicta? Excepturi exercitationem voluptates obcaecati ad iusto sit architecto aspernatur!
+                            </div>
+                            <div class="comment-author">-R.Folculm</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+<!-- section 7 -->
 <!-- footer -->
         <footer class="footer">
             <nav class="icons icons-footer">
