--- a/index.html
+++ b/index.html
@@ -26,13 +26,23 @@
                 </nav>
                 <button class="btn btn-primary"><span>login</span><span>login</span></button>
             </div>
-            <nav class="icons header-icons">
+            <nav class="icons icons-header">
                 <ul class="icons-list">
-                    <li><a href="#" class="icons-link"><i class="icons-fab fab fa-twitter"></i></a></li>
-                    <li><a href="#" class="icons-link"><i class="icons-fab fab fa-facebook-f"></i></a></li>
-                    <li><a href="#" class="icons-link"><i class="icons-fab fab fa-linkedin-in"></i></a></li>
-                    <li><a href="#" class="icons-link"><i class="icons-fab fab fa-instagram"></i></a></li>
-                    <li><a href="#" class="icons-link"><i class="icons-fab fab fa-google-plus-g"></i></a></li>
+                    <li class="icons-item"><a href="" class="icons-link">
+                        <svg class="icons-icon"><use xlink:href="imgs/sprite.svg#twitter"></use></svg>
+                    </a></li>
+                    <li class="icons-item"><a href="" class="icons-link">
+                        <svg class="icons-icon"><use xlink:href="imgs/sprite.svg#facebook"></use></svg>
+                    </a></li>
+                    <li class="icons-item"><a href="" class="icons-link">
+                        <svg class="icons-icon"><use xlink:href="imgs/sprite.svg#instagram"></use></svg>
+                    </a></li>
+                    <li class="icons-item"><a href="" class="icons-link">
+                        <svg class="icons-icon"><use xlink:href="imgs/sprite.svg#linkedin"></use></svg>
+                    </a></li>
+                    <li class="icons-item"><a href="" class="icons-link">
+                        <svg class="icons-icon"><use xlink:href="imgs/sprite.svg#google-plus"></use></svg>
+                    </a></li>
                 </ul>
             </nav>
         </header>
@@ -58,7 +68,7 @@
 <!-- section 2 -->
         <section class="sec-features">
             <div class="sec-features-top">
-                <h1 class="t2 sec-features-heading">Lorem, ipsum dolor.</h1>
+                <h1 class="t2 sec-features-heading">section features</h1>
                 <p class="t4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi non adipisci soluta hic maiores quidem maxime placeat ullam quaerat voluptatem! Suscipit distinctio dignissimos magni quaerat commodi! Quis nostrum quae architecto?</p>
             </div>
             <div class="sec-features-bottom">
@@ -98,25 +108,25 @@
 <!-- section 3 -->
         <section class="sec-workflow">
             <div class="sec-workflow-top">
-                <h1 class="t2">Lorem, ipsum dolor.</h1>
+                <h1 class="t2">section workflow</h1>
                 <p class="t4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi non adipisci soluta hic maiores quidem maxime placeat ullam quaerat voluptatem! Suscipit distinctio dignissimos magni quaerat commodi! Quis nostrum quae architecto?</p>
             </div>
             <div class="sec-workflow-bottom">
                 <div class="sec-workflow-left">
                     <div class="sec-workflow-box">
-                        <h2 class="sec-workflow-heading t3 text-right">1- Lorem, ipsum dolor.</h2>
+                        <h2 class="sec-workflow-heading t3 text-right">box make a speech</h2>
                         <img class="sec-workflow-icon f-right" src="imgs/workflow1.png" />
                         <p class="s1 text-right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, amet maiores. Ratione sed repellendus possimus!</p>
                     </div>
                     <div class="sec-workflow-box"></div>
                     <div class="sec-workflow-box">
-                        <h2 class="sec-workflow-heading t3 text-right">2- Lorem, ipsum dolor.</h2>
+                        <h2 class="sec-workflow-heading t3 text-right">Box check missions</h2>
                         <img class="sec-workflow-icon f-right" src="imgs/workflow2.png" />
                         <p class="s1 text-right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, amet maiores. Ratione sed repellendus possimus!</p>
                     </div>
                     <div class="sec-workflow-box"></div>
                     <div class="sec-workflow-box">
-                        <h2 class="sec-workflow-heading t3 text-right">3- Lorem, ipsum dolor.</h2>
+                        <h2 class="sec-workflow-heading t3 text-right">box develop an app</h2>
                         <img class="sec-workflow-icon f-right" src="imgs/workflow3.png" />
                         <p class="s1 text-right">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, amet maiores. Ratione sed repellendus possimus!</p>
                     </div>
@@ -133,13 +143,13 @@
                 <div class="sec-workflow-right">
                     <div class="sec-workflow-box"></div>
                     <div class="sec-workflow-box">
-                        <h2 class="sec-workflow-heading t3">4- Lorem, ipsum dolor.</h2>
+                        <h2 class="sec-workflow-heading t3">box task sharing</h2>
                         <img class="sec-workflow-icon" src="imgs/workflow4.png" />
                         <p class="s1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, amet maiores. Ratione sed repellendus possimus!</p>
                     </div>
                     <div class="sec-workflow-box"></div>
                     <div class="sec-workflow-box">
-                        <h2 class="sec-workflow-heading t3">5- Lorem, ipsum dolor.</h2>
+                        <h2 class="sec-workflow-heading t3">box work with us</h2>
                         <img class="sec-workflow-icon" src="imgs/workflow5.png" />
                         <p class="s1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque, amet maiores. Ratione sed repellendus possimus!</p>
                     </div>
@@ -152,7 +162,7 @@
         <section class="sec-counter">
             <div class="sec-counter-container">
                 <div class="sec-counter-top">
-                    <h1 class="t2">Lorem, ipsum dolor.</h1>
+                    <h1 class="t2">section counter</h1>
                     <p class="t4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi non adipisci soluta hic maiores quidem maxime placeat ullam quaerat voluptatem! Suscipit distinctio dignissimos magni quaerat commodi! Quis nostrum quae architecto?</p>
                 </div>
                 <div class="sec-counter-bottom">
@@ -191,7 +201,7 @@
 <!-- section 4 -->
 <!-- section 5 -->
         <section class="sec-card">
-            <h1 class="t2 t2-primary">Lorem, ipsum dolor.</h1>
+            <h1 class="t2 t2-primary">section card</h1>
             <div class="sec-card-cards">
                 <div class="card">
                     <div class="card-top card-pink">
@@ -318,15 +328,89 @@
 <!-- section 7 -->
 <!-- footer -->
         <footer class="footer">
-            <nav class="icons icons-footer">
-                <ul class="icons-list">
-                    <li><a href="#" class="icons-link"><i class="icons-fab fab fa-twitter"></i></a></li>
-                    <li><a href="#" class="icons-link"><i class="icons-fab fab fa-facebook-f"></i></a></li>
-                    <li><a href="#" class="icons-link"><i class="icons-fab fab fa-linkedin-in"></i></a></li>
-                    <li><a href="#" class="icons-link"><i class="icons-fab fab fa-instagram"></i></a></li>
-                    <li><a href="#" class="icons-link"><i class="icons-fab fab fa-google-plus-g"></i></a></li>
-                </ul>
-            </nav>
+            <div class="footer-top">
+                <div class="footer-contact">
+                    <div class="contact">
+                        <ul class="contact-list">
+                            <li class="contact-item">
+                                <svg class="contact-icon">
+                                    <use xlink:href="imgs/sprite.svg#pin"></use>
+                                </svg>
+                                <span>Wola / Warszawa</span>
+                            </li>
+                            <li class="contact-item">
+                                <svg class="contact-icon">
+                                    <use xlink:href="imgs/sprite.svg#call"></use>
+                                </svg>
+                                <span>+48 400 343 339</span>
+                            </li>
+                            <li class="contact-item">
+                                <svg class="contact-icon">
+                                    <use xlink:href="imgs/sprite.svg#smartphone"></use>
+                                </svg>
+                                <span>+48 899 355 712</span>
+                            </li>
+                            <li class="contact-item">
+                                <svg class="contact-icon">
+                                    <use xlink:href="imgs/sprite.svg#mail"></use>
+                                </svg>
+                                <span>mercansoft@mail.com</span>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-links">
+                    <div class="footer-container">
+                        <h4 class="footer-header">about <span class="footer-underline"></span></h4>
+                        <ul class="footer-list">
+                            <li class="footer-item"><a href="#" class="footer-link">One Footer</a></li>
+                            <li class="footer-item"><a href="#" class="footer-link">Two Footer</a></li>
+                            <li class="footer-item"><a href="#" class="footer-link">Three Footer</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-container">
+                        <h4 class="footer-header">company <span class="footer-underline"></span></h4>
+                        <ul class="footer-list">
+                            <li class="footer-item"><a href="#" class="footer-link">One Footer</a></li>
+                            <li class="footer-item"><a href="#" class="footer-link">Two Footer</a></li>
+                            <li class="footer-item"><a href="#" class="footer-link">Three Footer</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-container">
+                        <h4 class="footer-header">resources <span class="footer-underline"></span></h4>
+                        <ul class="footer-list">
+                            <li class="footer-item"><a href="#" class="footer-link">One Footer</a></li>
+                            <li class="footer-item"><a href="#" class="footer-link">Two Footer</a></li>
+                            <li class="footer-item"><a href="#" class="footer-link">Three Footer</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-container">
+                        <h4 class="footer-header">contact <span class="footer-underline"></span></h4>
+                        <nav class="icons icons-footer">
+                            <ul class="icons-list">
+                                <li class="icons-item"><a href="" class="icons-link">
+                                    <svg class="icons-icon"><use xlink:href="imgs/sprite.svg#twitter"></use></svg>
+                                </a></li>
+                                <li class="icons-item"><a href="" class="icons-link">
+                                    <svg class="icons-icon"><use xlink:href="imgs/sprite.svg#facebook"></use></svg>
+                                </a></li>
+                                <li class="icons-item"><a href="" class="icons-link">
+                                    <svg class="icons-icon"><use xlink:href="imgs/sprite.svg#instagram"></use></svg>
+                                </a></li>
+                                <li class="icons-item"><a href="" class="icons-link">
+                                    <svg class="icons-icon"><use xlink:href="imgs/sprite.svg#linkedin"></use></svg>
+                                </a></li>
+                                <li class="icons-item"><a href="" class="icons-link">
+                                    <svg class="icons-icon"><use xlink:href="imgs/sprite.svg#google-plus"></use></svg>
+                                </a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p class="footer-copyright">Copyright &copy; &nbsp; All rights reserved.</p>
+            </div>
         </footer>
 <!-- footer -->
     </div>
