Footer, Information and Header Sections was updated.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <h1 class="t1">
                         <span>Lorem, dolor sit amet</span> 
                         <span>consectetur adipisicing. </span>
-                        <span>Rerum! Minima fugiat beatae quos.</span>
+                        <span>Rerum! Minima fugiat beatae.</span>
                     </h1>
                     <p class="t4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae non maiores iure nobis deleniti dolorem quidem! Hic magnam aut dolorem rerum. Fugit iure obcaecati sed possimus nostrum praesentium dicta assumenda?</p>
                     <button class="btn btn-primary btn-middle"><span>continue</span><span>continue</span></button>
